--- a/me/package.json
+++ b/me/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
     "p5": "^1.9.4",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
