--- a/me/package.json
+++ b/me/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
+    "html2canvas": "^1.4.1",
     "p5": "^1.9.4",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
